alert area fixed/ no jumping

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ nav>ul>li>a.active {
 }
 
 .container-pad {
-  padding: 20px 0 20px 20px;
+  padding: 40px 0 20px 20px;
 }
 
 .sidebar {
@@ -251,13 +251,20 @@ nav>ul>li>a.active {
 	width: 100%;
 }
 
-.full-page {
-	padding: 10px;
-	width: 100%;
-	float: left;
-}
 /*Page alert*/
 #page-alert {
+	padding: 10px;
+	margin: 0 auto 10px;
+	width: 70%;
+	color: green;
+	background: #2ECC71;
+	border-radius: 4px;
+	line-height: 30px;
+	position: absolute;
+	top: 230px;
+	left: 15%;
+}
+#page-fill {
 	padding: 10px;
 	margin: 0 auto 10px;
 	width: 90%;
